<?xml version="1.0"?>
<package>
  <name>pub_sub_test</name>
  <version>0.10.2</version>
  <description> ROS-Pub-Sub </description>
  <maintainer email="arghadeep25@gmail.com"> Arghadeep Mazumder</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>